--- a/front_end/my-app/package.json
+++ b/front_end/my-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
     "face-api.js": "^0.22.2",
     "lucide-react": "^0.516.0",
