--- a/front_end/my-app/package.json
+++ b/front_end/my-app/package.json
@@ -9,10 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
+    "chart.js": "^4.5.0",
     "face-api.js": "^0.22.2",
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
