--- a/front_end/my-app/package.json
+++ b/front_end/my-app/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.3.6",
     "chart.js": "^4.5.0",
     "face-api.js": "^0.22.2",
+    "framer-motion": "^12.20.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
